; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ipmi/extr_ipmi.c_ipmi_purge_completed_requests.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ipmi/extr_ipmi.c_ipmi_purge_completed_requests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipmi_device = type { i32, i32 }
%struct.ipmi_request = type { i32 }

@ir_link = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ipmi_device*)* @ipmi_purge_completed_requests to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipmi_purge_completed_requests(%struct.ipmi_device* %0) #0 {
  %2 = alloca %struct.ipmi_device*, align 8
  %3 = alloca %struct.ipmi_request*, align 8
  store %struct.ipmi_device* %0, %struct.ipmi_device** %2, align 8
  br label %4

4:                                                ; preds = %10, %1
  %5 = load %struct.ipmi_device*, %struct.ipmi_device** %2, align 8
  %6 = getelementptr inbounds %struct.ipmi_device, %struct.ipmi_device* %5, i32 0, i32 1
  %7 = call i32 @TAILQ_EMPTY(i32* %6)
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  br i1 %9, label %10, label %25

10:                                               ; preds = %4
  %11 = load %struct.ipmi_device*, %struct.ipmi_device** %2, align 8
  %12 = getelementptr inbounds %struct.ipmi_device, %struct.ipmi_device* %11, i32 0, i32 1
  %13 = call %struct.ipmi_request* @TAILQ_FIRST(i32* %12)
  store %struct.ipmi_request* %13, %struct.ipmi_request** %3, align 8
  %14 = load %struct.ipmi_device*, %struct.ipmi_device** %2, align 8
  %15 = getelementptr inbounds %struct.ipmi_device, %struct.ipmi_device* %14, i32 0, i32 1
  %16 = load %struct.ipmi_request*, %struct.ipmi_request** %3, align 8
  %17 = load i32, i32* @ir_link, align 4
  %18 = call i32 @TAILQ_REMOVE(i32* %15, %struct.ipmi_request* %16, i32 %17)
  %19 = load %struct.ipmi_device*, %struct.ipmi_device** %2, align 8
  %20 = getelementptr inbounds %struct.ipmi_device, %struct.ipmi_device* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = add nsw i32 %21, -1
  store i32 %22, i32* %20, align 4
  %23 = load %struct.ipmi_request*, %struct.ipmi_request** %3, align 8
  %24 = call i32 @ipmi_free_request(%struct.ipmi_request* %23)
  br label %4

25:                                               ; preds = %4
  ret void
}

declare dso_local i32 @TAILQ_EMPTY(i32*) #1

declare dso_local %struct.ipmi_request* @TAILQ_FIRST(i32*) #1

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.ipmi_request*, i32) #1

declare dso_local i32 @ipmi_free_request(%struct.ipmi_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
